--- a/docs/concepts/TMEngine.dita
+++ b/docs/concepts/TMEngine.dita
@@ -4,9 +4,12 @@
     <title>TMEngine</title>
     <shortdesc>TMEngine is an open source <xref
             href="https://en.wikipedia.org/wiki/Translation_memory" scope="external" format="html"
-            >Translation Memory</xref> ™ manager written in Java.</shortdesc>
+            >Translation Memory</xref>  (TM) manager written in Java.</shortdesc>
     <conbody>
-        <p>TMEngine can be used either as an embedded library that manages translation memories in a Java
-            application or as a standalone TM server via its REST API.</p>
+        <p>TMEngine can be used in two ways:</p>
+        <ul>
+            <li>As an embedded library that manages translation memories in a Java application;</li>
+            <li>As a standalone TM server via its REST API.</li>
+        </ul>
     </conbody>
 </concept>
