--- a/docs/concepts/rest/CloseMemory.dita
+++ b/docs/concepts/rest/CloseMemory.dita
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic id="OpenMemory">
-    <title>Open Memory</title>
+<topic id="CloseMemory">
+    <title>Close Memory</title>
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
-        <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"/><codeph>open</codeph></p>
+        <p>Default: <codeph conref="../ServerAPI.dita#ServerAPI/defaultUrl"/><codeph>close</codeph></p>
         <p>Send a '<codeph>POST</codeph>' request to the method end point with this parameters in a
             JSON body:</p>
         <simpletable>
@@ -16,7 +16,7 @@
             <strow>
                 <stentry><apiname>id</apiname></stentry>
                 <stentry>Yes</stentry>
-                <stentry>ID of the memory to open</stentry>
+                <stentry>ID of the memory to close</stentry>
             </strow>
         </simpletable>
         <p>Example:</p>
@@ -34,7 +34,7 @@
         <p>Example:</p>
         <codeblock translate="no">{
   "status": "failed",            
-  "reason": "Unknown memory type"        
+  "reason": "Unknown memory"        
 }</codeblock>
     </body>
 </topic>
