--- a/docs/concepts/rest/ProcessStatus.dita
+++ b/docs/concepts/rest/ProcessStatus.dita
@@ -4,7 +4,7 @@
     <title>Process Status</title>
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
-        <p>Default: <codeph conref="ServerAPI.dita#ServerAPI/defaultUrl"
+        <p>Default: <codeph conref="../ServerAPI.dita#ServerAPI/defaultUrl"
             /><codeph>status</codeph></p>
 
         <p>Send a <codeph>POST</codeph> request to the method end point with this parameters in a
