--- a/docs/concepts/rest/CloseMemory.dita
+++ b/docs/concepts/rest/CloseMemory.dita
@@ -5,7 +5,7 @@
     <body>
         <p>End Point: <codeph>[TMEngine URL]/create</codeph></p>
         <p>Default: <codeph conref="../ServerAPI.dita#ServerAPI/defaultUrl"/><codeph>close</codeph></p>
-        <p>Send a '<codeph>POST</codeph>' request to the method end point with this parameters in a
+        <p>Send a '<codeph>POST</codeph>' request to the method end point with this parameter in a
             JSON body:</p>
         <simpletable>
             <sthead>
