--- a/docs/concepts/ServerAPI.dita
+++ b/docs/concepts/ServerAPI.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="ServerAPI">
-    <title>REST Methods</title>
+    <title>REST API</title>
     <shortdesc/>
     <conbody>
         <p>The REST methods that TMEngine's server supports are:</p>
